--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/sign-in/sign-in.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/sign-in/sign-in.component.html
@@ -1,3 +1,24 @@
-<p>
-  sign-in works!
-</p>
+<div class="jumbotron">
+  <div class="container">
+    <h1 class="display-5 text-info">Sign in</h1>
+    <app-alerts></app-alerts>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label>Email</label>
+        <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+          <div *ngIf="f.email.errors.required">Email is required</div>
+          <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label>Password</label>
+        <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+          <div *ngIf="f.password.errors.required">Password is required</div>
+        </div>
+      </div>
+      <button class="btn btn-success" type="submit">Log in</button>
+    </form>
+  </div>
+</div>
