--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/navbar/navbar.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/navbar/navbar.component.html
@@ -33,6 +33,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/profile">Profile</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/sign-in">Log out</a>
+        </li>
       </ul>
     </ng-template>
   </div>
