--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/sign-up/sign-up.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/sign-up/sign-up.component.html
@@ -35,7 +35,7 @@
           <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
           <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
             <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
-            <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
+            <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match.</div>
           </div>
         </div>
         <button class="btn btn-success" type="submit">Sign up</button>
