--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/app.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="loading-overlay" *ngIf="loading">
+  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</div>
+<div class="md-3 mx-3">
+  <router-outlet></router-outlet>
+</div>
