--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/navbar/navbar.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/navbar/navbar.component.html
@@ -1,5 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="/"><b>{{title}}</b></a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary border-bottom border-info">
+  <a class="navbar-brand" routerLink="/">
+    <b>{{title}}</b>
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
           aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -21,22 +23,31 @@
         </ul>
       </span>
     <ng-template #authenticated>
-      <ul class="navbar-nav">
-        <li class="nav-item active">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item">
           <a class="nav-link" routerLink="/dashboard">
             <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
             Dashboard <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/my-activies">Activities</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarActivitiesDropdownMenuLink" role="button" data-toggle="dropdown"
+             aria-haspopup="true" aria-expanded="false">
+            Activities
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarActivitiesDropdownMenuLink">
+            <a class="dropdown-item" href="/activities">Activity feed</a>
+            <a class="dropdown-item" href="/add-activity">Add new activity</a>
+          </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/profile">Profile</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/sign-in">Log out</a>
-        </li>
       </ul>
+      <a class="btn btn-outline-light" routerLink="/sign-in">Log out</a>
+      <!--<li class="nav-item">-->
+      <!--</li>-->
+      <!--</ul>-->
     </ng-template>
+    <br>
   </div>
 </nav>
