--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/add-activity/add-activity.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/add-activity/add-activity.component.html
@@ -1,39 +1,72 @@
 <div class="mt-2 mx-3">
   <div class="mb-2">
-    <!--<h1>Add activity</h1>-->
     <a class="btn btn-outline-primary" href="/activities" role="button">Back to activities</a>
   </div>
   <div class="card text-dark bg-light mb-3">
     <div class="card-header bg-dark text-light">Add new activity</div>
     <div class="card-body border-bottom border-warning">
       <app-alerts></app-alerts>
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-          <label>Title</label>
-          <input type="text" formControlName="title" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
-          <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+      <form [formGroup]="addActivityForm" (ngSubmit)="onSubmit()">
+        <div class="form-group input-group">
+          <div class="input-group-prepend">
+            <label class="input-group-text">Title</label>
+          </div>
+          <input type="text" formControlName="title" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.title.errors }" />
+          <div *ngIf="submitted && f.title.errors" class="invalid-feedback">
             <div *ngIf="f.title.errors.required">Title is required</div>
-            <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+            <div *ngIf="f.title.errors.maxLength">Title is too long</div>
           </div>
         </div>
-        <div class="form-group">
-          <label>Category</label>
-          <input type="text" formControlName="title" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
-          <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-            <div *ngIf="f.title.errors.required">Title is required</div>
-            <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+        <div class="form-group input=group">
+        <div class="input-group-prepend">
+          <label class="input-group-text" for="catSelect">Category</label>
+        </div>
+          <select class="custom-select" id="catSelect" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.category.errors }">
+            <option selected>Choose...</option>
+            <option value="run">Run</option>
+            <option value="ride">Ride</option>
+            <option value="swim">Swim</option>
+          </select>
+          <div *ngIf="submitted && f.category.errors" class="invalid-feedback">
+            <div *ngIf="f.category.errors.required">Category is required</div>
           </div>
         </div>
-        <div class="form-group">
-          <label>Description</label>
-          <textarea formControlName="desc" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }"></textarea>
-          <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-            <div *ngIf="f.title.errors.required">Title is required</div>
-            <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+        <div class="row">
+          <div class="form-group input-group col-7">
+            <div class="input-group-prepend">
+              <label class="input-group-text">Time <span class="text-secondary"> (HH:MM:SS)</span></label>
+            </div>
+            <input type="number" min="0" max="99" formControlName="timeHour" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.timeHour.errors }" />
+            <input type="number" min="0" max="59" formControlName="timeMin" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.timeMin.errors }" />
+            <input type="number" min="0" max="59" formControlName="timeSec" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.timeSec.errors }" />
+            <!--<div *ngIf="submitted && f.timeSec.errors" class="invalid-feedback">-->
+              <!--<div *ngIf="f.timeSec.errors.positive">Time must be positive</div>-->
+            <!--</div>-->
           </div>
-        </div>
+          <div class="form-group input-group col-5">
+            <div class="input-group-prepend">
+              <label class="input-group-text">Distance</label>
+            </div>
+            <input type="number" step="0.01" min="0" max="5000" formControlName="distance" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.distance.errors }" />
+            <div class="input-group-append">
+              <label class="input-group-text">km</label>
+            </div>
+            <div *ngIf="submitted && f.distance.errors" class="invalid-feedback">
+              <div *ngIf="f.distance.errors.required">Distance is required</div>
+            </div>
+          </div>
 
-        <button class="btn btn-primary" type="submit">Log in</button>
+        </div>
+        <div class="form-group input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text">Description</span>
+          </div>
+          <textarea formControlName="description" class="form-control"  placeholder="Write about your adventure..." [ngClass]="{ 'is-invalid': submitted && f.description.errors }"></textarea>
+          <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
+            <div *ngIf="f.title.errors.maxLength">Description is too long</div>
+          </div>
+        </div>
+        <button class="btn btn-primary" type="submit">Add activity</button>
       </form>
     </div>
   </div>
