--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/add-activity/add-activity.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/add-activity/add-activity.component.html
@@ -6,7 +6,6 @@
   <div class="card text-dark bg-light my-2">
     <div class="card-header bg-dark text-light">Add new activity</div>
     <div class="card-body border-bottom border-warning">
-      <app-alerts></app-alerts>
       <form [formGroup]="addActivityForm" (ngSubmit)="onSubmit()">
         <div class="form-group input-group">
           <div class="input-group-prepend">
@@ -19,21 +18,31 @@
             <div *ngIf="f.title.errors.maxLength">Title is too long</div>
           </div>
         </div>
-        <div class="form-group input=group">
+        <div class="form-group input-group">
           <div class="input-group-prepend">
-            <label class="input-group-text bg-white" for="catSelect">Category</label>
+            <label class="input-group-text bg-white">Category</label>
           </div>
-          <select class="custom-select" id="catSelect" class="form-control"
-                  [ngClass]="{ 'is-invalid': submitted && f.category.errors }">
-            <!--<option selected>Choose...</option>-->
-            <option value="run">Run</option>
-            <option value="ride">Ride</option>
-            <option value="swim">Swim</option>
-          </select>
+          <input type="text" formControlName="category" class="form-control"
+                 [ngClass]="{ 'is-invalid': submitted && f.category.errors }"/>
           <div *ngIf="submitted && f.category.errors" class="invalid-feedback">
-            <div *ngIf="f.category.errors.minLength">Select a category</div>
+            <div *ngIf="f.category.errors.required">Category is required</div>
+            <div *ngIf="f.category.errors.mustBeValid">Category must match one of following: (ride, run, swim).</div>
           </div>
         </div>
+
+        <!--<div class="form-group input=group">-->
+          <!--<div class="input-group-prepend">-->
+            <!--<label class="input-group-text bg-white" for="catSelect">Category</label>-->
+          <!--</div>-->
+          <!--<select class="custom-select" id="catSelect" class="form-control"-->
+                  <!--[(ngModel)]="selectedOption"-->
+                  <!--[ngClass]="{ 'is-invalid': submitted && f.category.errors }">-->
+            <!--<option *ngFor="let cat of categories">{{cat | titlecase}}</option>-->
+          <!--</select>-->
+          <!--<div *ngIf="submitted && f.category.errors" class="invalid-feedback">-->
+            <!--<div *ngIf="f.category.errors.minLength">Select a category</div>-->
+          <!--</div>-->
+        <!--</div>-->
         <div class="row">
           <div class="form-group input-group col-5">
             <div class="input-group-prepend">
