Added ChartJS dependencies

--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/brief-activity/brief-activity.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/brief-activity/brief-activity.component.html
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <a class="btn btn-warning btn-sm btn-block" href="/show-activity/{{activity.id}}">Show details</a>
+    <a class="btn btn-primary btn-sm btn-block" href="/show-activity/{{activity.id}}">Show details</a>
   </div>
   <!--<div class="collapse" id="comments">-->
     <!--<div class="card-header text-dark bg-light border-bottom border-secondary"><b>Mike: </b>Comment 1</div>-->
