--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/app.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/app.component.html
@@ -2,6 +2,6 @@
 <div class="loading-overlay" *ngIf="loading">
   <mat-progress-bar mode="indeterminate"></mat-progress-bar>
 </div>
-<div class="md-3 mx-3">
+<div class="md-3 mx-3 col-xl-8">
   <router-outlet></router-outlet>
 </div>
