--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/activities/activities.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/activities/activities.component.html
@@ -1,7 +1,7 @@
 <div class="mt-2 mx-3">
   <div class="jumbotron">
     <h1>Activities</h1>
-    <a class="btn btn-outline-primary" href="/add-activity" role="button">Add new activity</a>
+    <a class="btn btn-outline-primary" routerLink="/add-activity" role="button">Add new activity</a>
   </div>
 
   <app-loader *ngIf="toggleService.isShown(onCreateLoaderName)" class="my-3 d-flex justify-content-center"
