--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/brief-activity/brief-activity.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/brief-activity/brief-activity.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="activity" class="card text-dark bg-light mb-3">
-  <div class="card-header">Created {{ createdAgo | timeAgo }} by <a href=""><span *ngIf="userName">{{userName}}</span><span *ngIf="!userName"> user {{activity.userId | slice:0:4}}...</span></a>
+  <div class="card-header">Created {{ createdAgo | timeAgo }} by <a routerLink="/profile/{{activity.userId}}"><span *ngIf="userName">{{userName}}</span><span *ngIf="!userName"> user {{activity.userId | slice:0:4}}...</span></a>
   </div>
   <div class="card-body border-bottom border-info">
-    <h5 class="card-title"><a class="text-dark" href="/show-activity/{{activity.id}}">{{ (activity.title.length > 25)?((activity.title | slice:0:20) + '...'):(activity.title)}} <span
-      class="badge text-light bg-dark">{{activity.category | uppercase}}</span></a></h5>
+    <h5 class="card-title"><span class="badge text-light bg-{{(activity.category | lowercase)}}">{{activity.category | uppercase}}</span><br/>
+      <a class="text-dark" routerLink="/show-activity/{{activity.id}}">{{ (activity.title.length > 25)?((activity.title | slice:0:20) + '...'):(activity.title)}}</a></h5>
     <div class="row justify-content-center mt-1 mb-2">
       <div class="card text-center">
         <div class="card-header border-success">
@@ -23,20 +23,6 @@
       </div>
     </div>
 
-    <a class="btn btn-primary btn-sm btn-block" href="/show-activity/{{activity.id}}">Show details</a>
+    <a class="btn btn-primary btn-sm btn-block" routerLink="/show-activity/{{activity.id}}">Show details</a>
   </div>
-  <!--<div class="collapse" id="comments">-->
-    <!--<div class="card-header text-dark bg-light border-bottom border-secondary"><b>Mike: </b>Comment 1</div>-->
-    <!--<div class="card-header text-dark bg-light border-bottom border-secondary"><b>John: </b>Comment 1</div>-->
-    <!--<div class="card-header text-dark bg-light border-bottom border-secondary"><b>Fastest rider ever: </b>Thank you-->
-      <!--too!-->
-    <!--</div>-->
-    <!--<div class="card-header text-light bg-light">-->
-      <!--<form class="form-inline my-2 my-lg-0">-->
-        <!--<input class="form-control mr-sm-2 border border-info w-auto" type="search" placeholder="Write comment..."-->
-               <!--aria-label="Add comment">-->
-        <!--<button class="btn btn-info my-2 my-sm-0" type="submit">+</button>-->
-      <!--</form>-->
-    <!--</div>-->
-  <!--</div>-->
 </div>
