--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/edit-activity/edit-activity.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/edit-activity/edit-activity.component.html
@@ -5,16 +5,16 @@
 
   <div *ngIf="!toggleService.isShown(onCreateLoaderName) && activity && isOwner">
     <div class="my-2">
-      <a class="btn btn-outline-primary" href="/show-activity/{{activity.id}}" role="button">Back to activity details</a>
+      <a class="btn btn-outline-primary" routerLink="/show-activity/{{activity.id}}" role="button">Back to activity details</a>
     </div>
     <app-alerts></app-alerts>
     <div class="card text-dark bg-light my-2">
-      <div class="card-header bg-dark text-light">Edit activity {{activity.id}}</div>
+      <div class="card-header bg-primary text-light">Edit activity {{activity.id}}</div>
       <div class="card-body border-bottom border-warning">
         <form [formGroup]="editActivityForm" (ngSubmit)="onSubmit()">
           <div class="form-group input-group">
             <div class="input-group-prepend">
-              <label class="input-group-text bg-white">Title</label>
+              <label class="input-group-text text-white bg-dark">Title</label>
             </div>
             <input type="text" formControlName="title" class="form-control"
                    [ngClass]="{ 'is-invalid': f.title.errors }"/>
@@ -25,7 +25,7 @@
           </div>
           <div class="form-group input-group">
             <div class="input-group-prepend">
-              <label class="input-group-text bg-white">Category</label>
+              <label class="input-group-text text-white bg-dark">Category</label>
             </div>
             <input type="text" formControlName="category" class="form-control"
                    [ngClass]="{ 'is-invalid': f.category.errors }"/>
@@ -37,12 +37,12 @@
           <div class="row">
             <div class="form-group input-group col-5">
               <div class="input-group-prepend">
-                <label class="input-group-text bg-white border border-success">Distance</label>
+                <label class="input-group-text text-white bg-dark">Distance</label>
               </div>
               <input type="number" step="0.01" min="0" max="5000" formControlName="distance" class="form-control"
                      [ngClass]="{ 'is-invalid': f.distance.errors }"/>
               <div class="input-group-append">
-                <label class="input-group-text bg-white border border-success">km</label>
+                <label class="input-group-text bg-white border">km</label>
               </div>
               <div *ngIf="f.distance.errors" class="invalid-feedback">
                 <div *ngIf="f.distance.errors.required">Distance is required</div>
@@ -52,13 +52,13 @@
             </div>
             <div class="form-group input-group col-7">
               <div class="input-group-prepend">
-                <label class="input-group-text bg-white border border-info">Time <span class="text-secondary"> (HH:MM:SS)</span></label>
+                <label class="input-group-text text-white bg-dark">Time</label>
               </div>
-              <input type="number" min="0" max="99" formControlName="timeHour" class="form-control"
+              <input type="number" min="0" max="99" formControlName="timeHour" class="form-control" placeholder="HH"
                      [ngClass]="{ 'is-invalid': f.timeHour.errors }"/>
-              <input type="number" min="0" max="59" formControlName="timeMin" class="form-control"
+              <input type="number" min="0" max="59" formControlName="timeMin" class="form-control" placeholder="MM"
                      [ngClass]="{ 'is-invalid': f.timeMin.errors }"/>
-              <input type="number" min="0" max="59" formControlName="timeSec" class="form-control"
+              <input type="number" min="0" max="59" formControlName="timeSec" class="form-control" placeholder="SS"
                      [ngClass]="{ 'is-invalid': f.timeSec.errors }"/>
               <div *ngIf="f.timeHour.errors" class="invalid-feedback">
                 <div *ngIf="f.timeHour.errors.min || f.timeHour.errors.max">Invalid hours</div>
@@ -71,9 +71,42 @@
               </div>
             </div>
           </div>
+          <div class="card mb-2">
+            <div class="card-header text-white bg-dark">
+              Start time
+            </div>
+            <div class="card-body">
+              <form class="d-flex justify-content-center text-center">
+                <div class="form-group">
+                  <ngb-timepicker [formControl]="timePickerCtrl" required></ngb-timepicker>
+                  <div class="small form-text text-danger" *ngIf="!timePickerCtrl.valid">
+                    <div *ngIf="submitted && timePickerCtrl.errors['required']">Start time is required</div>
+                  </div>
+                </div>
+              </form>
+              <form class="form-inline justify-content-center mb-2">
+                <div class="form-group">
+                  <div class="input-group">
+                    <input class="form-control" placeholder="yyyy-mm-dd" [formControl]="datePickerCtrl"
+                           name="dp" [(ngModel)]="datePickerModel" ngbDatepicker [footerTemplate]="footerTemplate" #d="ngbDatepicker" required>
+                    <div class="input-group-append">
+                      <button class="btn btn-outline-primary" (click)="d.toggle()"><small>\/</small></button>
+                      <button class="btn btn-outline-primary" (click)="datePickerModel = today">Today</button>
+                    </div>
+                  </div>
+                </div>
+              </form>
+              <div class="small form-text text-danger" *ngIf="!datePickerCtrl.valid">
+                <div *ngIf="submitted && datePickerCtrl.errors['required']">Start date is required</div>
+              </div>
+              <div class="small form-text text-secondary text-center mt-1">
+                Please note, that if you select time in future, it will be replaced with current time.
+              </div>
+            </div>
+          </div>
           <div class="form-group input-group">
             <div class="input-group-prepend">
-              <span class="input-group-text bg-white">Description</span>
+              <span class="input-group-text text-white bg-dark">Description</span>
             </div>
             <textarea formControlName="description" class="form-control" placeholder="Write about your adventure..."
                       [ngClass]="{ 'is-invalid': f.description.errors }"></textarea>
@@ -92,12 +125,12 @@
   <div class="my-2">
     <div *ngIf="!toggleService.isShown(onCreateLoaderName) && activity && !isOwner">
       <h4>You cannot edit this activity.</h4>
-      <a class="btn btn-outline-primary" href="/show-activity/{{activity.id}}" role="button">Back to activity details</a>
+      <a class="btn btn-outline-primary" routerLink="/show-activity/{{activity.id}}" role="button">Back to activity details</a>
     </div>
 
     <div *ngIf="!toggleService.isShown(onCreateLoaderName) && !activity && !isOwner">
       <h4>This activity doesn't exist.</h4>
-      <a class="btn btn-outline-primary" href="/activities" role="button">Back to activities</a>
+      <a class="btn btn-outline-primary" routerLink="/activities" role="button">Back to activities</a>
     </div>
   </div>
 
