--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/page-not-found/page-not-found.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/page-not-found/page-not-found.component.html
@@ -2,6 +2,6 @@
   <div class="jumbotron">
     <h1 class="text-danger"><b>404</b> page not found!</h1>
     <br/>
-    <a class="btn btn-outline-primary" href="/dashboard" role="button">Return to dashboard</a>
+    <a class="btn btn-outline-primary" routerLink="/dashboard" role="button">Return to dashboard</a>
   </div>
 </div>
