--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/service-not-available/service-not-available.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/service-not-available/service-not-available.component.html
@@ -4,6 +4,6 @@
     <br/>
     <p class="lead">Please try again later.</p>
     <br/>
-    <a class="btn btn-outline-primary" href="/dashboard" role="button">Return to dashboard</a>
+    <a class="btn btn-outline-primary" routerLink="/dashboard" role="button">Return to dashboard</a>
   </div>
 </div>
