--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/add-activity/add-activity.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/add-activity/add-activity.component.html
@@ -1,6 +1,6 @@
 <div class="mt-2 mx-3">
   <div class="my-2">
-    <a class="btn btn-outline-primary" href="/activities" role="button">Back to activities</a>
+    <a class="btn btn-outline-primary" routerLink="/activities" role="button">Back to activities</a>
   </div>
   <app-alerts></app-alerts>
   <div class="card text-dark bg-light my-2">
