--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/navbar/navbar.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/navbar/navbar.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary border-bottom border-info">
-  <a class="navbar-brand" routerLink="/">
+  <a *ngIf="!isAuthenticated()" class="navbar-brand" routerLink="/">
+    <b>{{title}}</b>
+  </a>
+  <a *ngIf="isAuthenticated()" class="navbar-brand" routerLink="/dashboard">
     <b>{{title}}</b>
   </a>
   <button name="toggler" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
@@ -40,7 +43,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/profile">Profile</a>
+          <a class="nav-link" routerLink="/show-profile">Profile</a>
         </li>
       </ul>
       <a class="btn btn-outline-light" routerLink="/sign-in">Log out</a>
