Added total stats to profile

--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/profile-details/profile-details.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/profile-details/profile-details.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="account" class="my-3">
-  <div class="media col-8">
+  <div class="media">
     <img class="align-self-start mr-3 border rounded-circle border-warning" src="../../assets/profile.png"
          alt="profile-picture"
          style="width: 64px; height: 64px; border-width:3px !important">
